Fixed even spacing on menu. Added border images to directory.

--- a/templates/spd/css/template.css
+++ b/templates/spd/css/template.css
@@ -39,7 +39,20 @@ a
 {
 	width: 880px;
 	height: 100%;
-	margin: auto;
+	margin: 0 auto;
+}
+
+.hMenu
+{
+    text-align: justify;
+    margin: 0 auto;
+}
+
+.filler 
+{
+    width: 100%;
+    display: inline-block;
+    height: 0px !important;
 }
 
 #header
@@ -51,7 +64,6 @@ a
 {
 	width: 100%;
 	height: 30px;
-	text-align: justify;
 }
 
 #menu .menu
